"""initial schema

Revision ID: 52ce70c39825
Revises: 
Create Date: 2026-06-03 04:07:57.194642

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '52ce70c39825'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('user',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('username', sa.String(length=80), nullable=False),
    sa.Column('nickname', sa.String(length=80), nullable=True),
    sa.Column('email', sa.String(length=120), nullable=False),
    sa.Column('email_verified_at', sa.DateTime(), nullable=True),
    sa.Column('password', sa.String(length=255), nullable=False),
    sa.Column('avatar', sa.String(length=255), nullable=True),
    sa.Column('bio', sa.Text(), nullable=True),
    sa.Column('interests', sa.Text(), nullable=True),
    sa.Column('city', sa.String(length=80), nullable=True),
    sa.Column('nearby_enabled', sa.Boolean(), nullable=False),
    sa.Column('detected_city', sa.String(length=80), nullable=True),
    sa.Column('detected_region', sa.String(length=80), nullable=True),
    sa.Column('last_location_detected_at', sa.DateTime(), nullable=True),
    sa.Column('last_ip', sa.String(length=45), nullable=True),
    sa.Column('role', sa.String(length=20), nullable=False),
    sa.Column('trust_score', sa.Integer(), nullable=False),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('banned_at', sa.DateTime(), nullable=True),
    sa.Column('deleted_at', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('username')
    )
    op.create_table('admin_log',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('admin_id', sa.Integer(), nullable=False),
    sa.Column('action', sa.String(length=80), nullable=False),
    sa.Column('target_type', sa.String(length=50), nullable=False),
    sa.Column('target_id', sa.Integer(), nullable=True),
    sa.Column('detail', sa.Text(), nullable=True),
    sa.Column('ip_address', sa.String(length=45), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['admin_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('circle',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=120), nullable=False),
    sa.Column('tag', sa.String(length=50), nullable=True),
    sa.Column('cover_image', sa.String(length=255), nullable=True),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('announcement', sa.Text(), nullable=True),
    sa.Column('owner_id', sa.Integer(), nullable=True),
    sa.Column('pinned_post_id', sa.Integer(), nullable=True),
    sa.Column('is_pinned', sa.Boolean(), nullable=False),
    sa.Column('pinned_at', sa.DateTime(), nullable=True),
    sa.Column('is_system', sa.Boolean(), nullable=False),
    sa.Column('initial_member_count', sa.Integer(), nullable=False),
    sa.Column('member_count', sa.Integer(), nullable=False),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['owner_id'], ['user.id'], name='fk_circle_owner_id_user'),
    sa.ForeignKeyConstraint(['pinned_post_id'], ['post.id'], name='fk_circle_pinned_post_id_post', use_alter=True),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('direct_message',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('sender_id', sa.Integer(), nullable=False),
    sa.Column('recipient_id', sa.Integer(), nullable=False),
    sa.Column('content', sa.Text(), nullable=True),
    sa.Column('message_type', sa.String(length=20), nullable=False),
    sa.Column('image_path', sa.String(length=255), nullable=True),
    sa.Column('read_at', sa.DateTime(), nullable=True),
    sa.Column('expires_at', sa.DateTime(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['recipient_id'], ['user.id'], ),
    sa.ForeignKeyConstraint(['sender_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('direct_message', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_direct_message_expires_at'), ['expires_at'], unique=False)
        batch_op.create_index(batch_op.f('ix_direct_message_read_at'), ['read_at'], unique=False)

    op.create_table('direct_message_conversation_state',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('other_user_id', sa.Integer(), nullable=False),
    sa.Column('is_hidden', sa.Boolean(), nullable=False),
    sa.Column('hidden_at', sa.DateTime(), nullable=True),
    sa.Column('is_deleted', sa.Boolean(), nullable=False),
    sa.Column('deleted_at', sa.DateTime(), nullable=True),
    sa.Column('cleared_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.CheckConstraint('user_id != other_user_id', name='ck_direct_message_conversation_state_not_self'),
    sa.ForeignKeyConstraint(['other_user_id'], ['user.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id', 'other_user_id', name='uq_direct_message_conversation_state_pair')
    )
    with op.batch_alter_table('direct_message_conversation_state', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_direct_message_conversation_state_other_user_id'), ['other_user_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_direct_message_conversation_state_user_id'), ['user_id'], unique=False)

    op.create_table('email_verification_code',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.Column('email', sa.String(length=120), nullable=False),
    sa.Column('code', sa.String(length=128), nullable=False),
    sa.Column('purpose', sa.String(length=30), nullable=False),
    sa.Column('expires_at', sa.DateTime(), nullable=False),
    sa.Column('used_at', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('email_verification_code', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_email_verification_code_email'), ['email'], unique=False)

    op.create_table('interaction',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('target_type', sa.String(length=30), nullable=False),
    sa.Column('target_id', sa.Integer(), nullable=False),
    sa.Column('action_type', sa.String(length=20), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id', 'target_type', 'target_id', 'action_type', name='uq_interaction_user_target_action')
    )
    op.create_table('merchant_verification',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('business_name', sa.String(length=120), nullable=False),
    sa.Column('license_number', sa.String(length=120), nullable=True),
    sa.Column('document_path', sa.String(length=255), nullable=True),
    sa.Column('reason', sa.Text(), nullable=True),
    sa.Column('contact', sa.String(length=160), nullable=True),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('reject_reason', sa.Text(), nullable=True),
    sa.Column('reviewer_id', sa.Integer(), nullable=True),
    sa.Column('reviewed_at', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['reviewer_id'], ['user.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('notification',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('recipient_id', sa.Integer(), nullable=False),
    sa.Column('type', sa.String(length=50), nullable=False),
    sa.Column('title', sa.String(length=120), nullable=False),
    sa.Column('content', sa.Text(), nullable=True),
    sa.Column('related_type', sa.String(length=50), nullable=True),
    sa.Column('related_id', sa.Integer(), nullable=True),
    sa.Column('read_at', sa.DateTime(), nullable=True),
    sa.Column('expires_at', sa.DateTime(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['recipient_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('notification', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_notification_expires_at'), ['expires_at'], unique=False)
        batch_op.create_index(batch_op.f('ix_notification_read_at'), ['read_at'], unique=False)
        batch_op.create_index(batch_op.f('ix_notification_recipient_id'), ['recipient_id'], unique=False)

    op.create_table('profile_visibility',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('profile_scope', sa.String(length=20), nullable=False),
    sa.Column('activity_scope', sa.String(length=20), nullable=False),
    sa.Column('circle_scope', sa.String(length=20), nullable=False),
    sa.Column('review_scope', sa.String(length=20), nullable=False),
    sa.Column('trust_score_scope', sa.String(length=20), nullable=False),
    sa.Column('show_interests', sa.Boolean(), nullable=False),
    sa.Column('show_interactions', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id', name='uq_profile_visibility_user')
    )
    op.create_table('trust_score_log',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('changed_by_id', sa.Integer(), nullable=True),
    sa.Column('change_type', sa.String(length=50), nullable=False),
    sa.Column('delta', sa.Integer(), nullable=False),
    sa.Column('score_before', sa.Integer(), nullable=False),
    sa.Column('score_after', sa.Integer(), nullable=False),
    sa.Column('reason', sa.Text(), nullable=True),
    sa.Column('related_type', sa.String(length=50), nullable=True),
    sa.Column('related_id', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['changed_by_id'], ['user.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('user_follow',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('follower_id', sa.Integer(), nullable=False),
    sa.Column('followed_id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.CheckConstraint('follower_id != followed_id', name='ck_user_follow_not_self'),
    sa.ForeignKeyConstraint(['followed_id'], ['user.id'], ),
    sa.ForeignKeyConstraint(['follower_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('follower_id', 'followed_id', name='uq_user_follow_pair')
    )
    with op.batch_alter_table('user_follow', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_user_follow_followed_id'), ['followed_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_user_follow_follower_id'), ['follower_id'], unique=False)

    op.create_table('activity',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('title', sa.String(length=120), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('detail', sa.Text(), nullable=True),
    sa.Column('city', sa.String(length=80), nullable=True),
    sa.Column('location', sa.String(length=255), nullable=True),
    sa.Column('start_time', sa.DateTime(), nullable=True),
    sa.Column('end_time', sa.DateTime(), nullable=True),
    sa.Column('timezone', sa.String(length=80), nullable=False),
    sa.Column('max_participants', sa.Integer(), nullable=True),
    sa.Column('initial_participants', sa.Integer(), nullable=False),
    sa.Column('image', sa.String(length=255), nullable=True),
    sa.Column('fee', sa.Float(), nullable=False),
    sa.Column('tags', sa.Text(), nullable=True),
    sa.Column('circle_id', sa.Integer(), nullable=True),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('cancel_reason', sa.Text(), nullable=True),
    sa.Column('cancelled_at', sa.DateTime(), nullable=True),
    sa.Column('is_featured', sa.Boolean(), nullable=False),
    sa.Column('is_official', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('organizer_id', sa.Integer(), nullable=False),
    sa.Column('preparation', sa.Text(), nullable=True),
    sa.ForeignKeyConstraint(['circle_id'], ['circle.id'], ),
    sa.ForeignKeyConstraint(['organizer_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('circle_member',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('circle_id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('role', sa.String(length=20), nullable=False),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('joined_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['circle_id'], ['circle.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('circle_id', 'user_id', name='uq_circle_member_circle_user')
    )
    op.create_table('post',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('title', sa.String(length=200), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('type', sa.String(length=20), nullable=False),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('circle_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['circle_id'], ['circle.id'], name='fk_post_circle_id_circle'),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], name='fk_post_user_id_user'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('activity_favorite',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('activity_id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['activity_id'], ['activity.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id', 'activity_id', name='uq_activity_favorite_user_activity')
    )
    op.create_table('activity_review',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('activity_id', sa.Integer(), nullable=False),
    sa.Column('reviewer_id', sa.Integer(), nullable=False),
    sa.Column('organization_score', sa.Integer(), nullable=False),
    sa.Column('venue_score', sa.Integer(), nullable=False),
    sa.Column('content_score', sa.Integer(), nullable=False),
    sa.Column('value_score', sa.Integer(), nullable=False),
    sa.Column('experience_score', sa.Integer(), nullable=False),
    sa.Column('average_score', sa.Float(), nullable=False),
    sa.Column('comment', sa.Text(), nullable=True),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['activity_id'], ['activity.id'], ),
    sa.ForeignKeyConstraint(['reviewer_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('activity_id', 'reviewer_id', name='uq_activity_review_activity_reviewer')
    )
    op.create_table('comment',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('author_id', sa.Integer(), nullable=False),
    sa.Column('activity_id', sa.Integer(), nullable=True),
    sa.Column('post_id', sa.Integer(), nullable=True),
    sa.Column('parent_id', sa.Integer(), nullable=True),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.CheckConstraint('(activity_id IS NOT NULL AND post_id IS NULL) OR (activity_id IS NULL AND post_id IS NOT NULL)', name='ck_comment_single_target'),
    sa.ForeignKeyConstraint(['activity_id'], ['activity.id'], ),
    sa.ForeignKeyConstraint(['author_id'], ['user.id'], ),
    sa.ForeignKeyConstraint(['parent_id'], ['comment.id'], ),
    sa.ForeignKeyConstraint(['post_id'], ['post.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('post_image',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('post_id', sa.Integer(), nullable=False),
    sa.Column('image_path', sa.String(length=255), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['post_id'], ['post.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('registration',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('activity_id', sa.Integer(), nullable=False),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('cancel_reason', sa.Text(), nullable=True),
    sa.Column('cancelled_at', sa.DateTime(), nullable=True),
    sa.Column('register_time', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['activity_id'], ['activity.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('review',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('activity_id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('rating', sa.Integer(), nullable=False),
    sa.Column('comment', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['activity_id'], ['activity.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('user_review',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('activity_id', sa.Integer(), nullable=False),
    sa.Column('reviewer_id', sa.Integer(), nullable=False),
    sa.Column('reviewee_id', sa.Integer(), nullable=False),
    sa.Column('punctuality_score', sa.Integer(), nullable=False),
    sa.Column('friendliness_score', sa.Integer(), nullable=False),
    sa.Column('communication_score', sa.Integer(), nullable=False),
    sa.Column('reliability_score', sa.Integer(), nullable=False),
    sa.Column('respect_score', sa.Integer(), nullable=False),
    sa.Column('safety_score', sa.Integer(), nullable=False),
    sa.Column('average_score', sa.Float(), nullable=False),
    sa.Column('comment', sa.Text(), nullable=True),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.CheckConstraint('communication_score BETWEEN 1 AND 5', name='ck_user_review_communication_score_range'),
    sa.CheckConstraint('friendliness_score BETWEEN 1 AND 5', name='ck_user_review_friendliness_score_range'),
    sa.CheckConstraint('punctuality_score BETWEEN 1 AND 5', name='ck_user_review_punctuality_score_range'),
    sa.CheckConstraint('reliability_score BETWEEN 1 AND 5', name='ck_user_review_reliability_score_range'),
    sa.CheckConstraint('respect_score BETWEEN 1 AND 5', name='ck_user_review_respect_score_range'),
    sa.CheckConstraint('safety_score BETWEEN 1 AND 5', name='ck_user_review_safety_score_range'),
    sa.ForeignKeyConstraint(['activity_id'], ['activity.id'], ),
    sa.ForeignKeyConstraint(['reviewee_id'], ['user.id'], ),
    sa.ForeignKeyConstraint(['reviewer_id'], ['user.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('activity_id', 'reviewer_id', 'reviewee_id', name='uq_user_review_activity_reviewer_reviewee')
    )
    op.create_table('comment_image',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('comment_id', sa.Integer(), nullable=False),
    sa.Column('image_path', sa.String(length=255), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['comment_id'], ['comment.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('comment_image')
    op.drop_table('user_review')
    op.drop_table('review')
    op.drop_table('registration')
    op.drop_table('post_image')
    op.drop_table('comment')
    op.drop_table('activity_review')
    op.drop_table('activity_favorite')
    op.drop_table('post')
    op.drop_table('circle_member')
    op.drop_table('activity')
    with op.batch_alter_table('user_follow', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_user_follow_follower_id'))
        batch_op.drop_index(batch_op.f('ix_user_follow_followed_id'))

    op.drop_table('user_follow')
    op.drop_table('trust_score_log')
    op.drop_table('profile_visibility')
    with op.batch_alter_table('notification', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_notification_recipient_id'))
        batch_op.drop_index(batch_op.f('ix_notification_read_at'))
        batch_op.drop_index(batch_op.f('ix_notification_expires_at'))

    op.drop_table('notification')
    op.drop_table('merchant_verification')
    op.drop_table('interaction')
    with op.batch_alter_table('email_verification_code', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_email_verification_code_email'))

    op.drop_table('email_verification_code')
    with op.batch_alter_table('direct_message_conversation_state', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_direct_message_conversation_state_user_id'))
        batch_op.drop_index(batch_op.f('ix_direct_message_conversation_state_other_user_id'))

    op.drop_table('direct_message_conversation_state')
    with op.batch_alter_table('direct_message', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_direct_message_read_at'))
        batch_op.drop_index(batch_op.f('ix_direct_message_expires_at'))

    op.drop_table('direct_message')
    op.drop_table('circle')
    op.drop_table('admin_log')
    op.drop_table('user')
    # ### end Alembic commands ###
