erDiagram
    USER ||--o{ ACTIVITY : organizes
    CIRCLE ||--o{ ACTIVITY : links
    USER ||--o{ REGISTRATION : registers
    ACTIVITY ||--o{ REGISTRATION : has
    USER ||--o{ ACTIVITY_FAVORITE : favorites
    ACTIVITY ||--o{ ACTIVITY_FAVORITE : favorited_by

    USER ||--o{ CIRCLE : owns
    CIRCLE ||--o{ CIRCLE_MEMBER : has
    USER ||--o{ CIRCLE_MEMBER : joins
    CIRCLE ||--o{ POST : contains
    USER ||--o{ POST : writes
    POST ||--o{ POST_IMAGE : has
    POST ||--o{ CIRCLE : pinned_by

    USER ||--o{ COMMENT : writes
    ACTIVITY ||--o{ COMMENT : receives
    POST ||--o{ COMMENT : receives
    COMMENT ||--o{ COMMENT : replies
    COMMENT ||--o{ COMMENT_IMAGE : has

    ACTIVITY ||--o{ REVIEW : legacy_reviews
    USER ||--o{ REVIEW : writes
    ACTIVITY ||--o{ ACTIVITY_REVIEW : receives
    USER ||--o{ ACTIVITY_REVIEW : writes
    CIRCLE ||--o{ CIRCLE_RATING : receives
    USER ||--o{ CIRCLE_RATING : writes
    USER ||--o{ TRUST_SCORE_LOG : has
    USER ||--o{ TRUST_SCORE_LOG : changes

    USER ||--o{ EMAIL_VERIFICATION_CODE : owns
    USER ||--o{ NOTIFICATION : receives
    USER ||--o{ FEEDBACK : submits
    USER ||--o{ FEEDBACK : replies
    USER ||--o{ DIRECT_MESSAGE : sends
    USER ||--o{ DIRECT_MESSAGE : receives
    USER ||--o{ DIRECT_MESSAGE_CONVERSATION_STATE : owns_state
    USER ||--o{ DIRECT_MESSAGE_CONVERSATION_STATE : peer_state
    USER ||--o{ USER_FOLLOW : follows
    USER ||--o{ USER_FOLLOW : followed_by
    USER ||--o{ MERCHANT_VERIFICATION : applies
    USER ||--o{ MERCHANT_VERIFICATION : reviews
    USER ||--o{ INTERACTION : performs
    USER ||--o| PROFILE_VISIBILITY : configures
    USER ||--o{ ADMIN_LOG : writes

    USER {
        int id PK
        string username UK
        string nickname
        string email UK
        datetime email_verified_at
        string password
        string avatar
        text bio
        text interests
        string city
        boolean nearby_enabled
        string detected_city
        string detected_region
        datetime last_location_detected_at
        string last_ip
        string role
        int trust_score
        string status
        datetime banned_at
        datetime deleted_at
        datetime created_at
    }

    ACTIVITY {
        int id PK
        string title
        text description
        text detail
        string city
        string location
        datetime start_time
        datetime end_time
        string timezone
        int max_participants
        int initial_participants
        string image
        float fee
        text tags
        int circle_id FK
        string status
        text cancel_reason
        datetime cancelled_at
        boolean is_featured
        boolean is_official
        datetime created_at
        int organizer_id FK
        text preparation
    }

    REGISTRATION {
        int id PK
        int user_id FK
        int activity_id FK
        string status
        text cancel_reason
        datetime cancelled_at
        datetime register_time
    }

    EMAIL_VERIFICATION_CODE {
        int id PK
        int user_id FK
        string email
        string code
        string purpose
        datetime expires_at
        datetime used_at
        datetime created_at
    }

    NOTIFICATION {
        int id PK
        int recipient_id FK
        string type
        string title
        text content
        string related_type
        int related_id
        datetime read_at
        datetime expires_at
        datetime created_at
    }

    FEEDBACK {
        int id PK
        int user_id FK
        string category
        string title
        text content
        string status
        text admin_reply
        int replied_by_id FK
        datetime replied_at
        datetime created_at
        datetime updated_at
    }

    DIRECT_MESSAGE {
        int id PK
        int sender_id FK
        int recipient_id FK
        text content
        string message_type
        string image_url
        datetime read_at
        datetime expires_at
        datetime created_at
    }

    DIRECT_MESSAGE_CONVERSATION_STATE {
        int id PK
        int user_id FK
        int other_user_id FK
        boolean is_hidden
        datetime hidden_at
        boolean is_deleted
        datetime deleted_at
        datetime cleared_at
        datetime updated_at
    }

    USER_FOLLOW {
        int id PK
        int follower_id FK
        int followed_id FK
        datetime created_at
    }

    MERCHANT_VERIFICATION {
        int id PK
        int user_id FK
        string business_name
        string license_number
        string document_url
        text reason
        string contact
        string status
        text reject_reason
        int reviewer_id FK
        datetime reviewed_at
        datetime created_at
        datetime updated_at
    }

    ACTIVITY_FAVORITE {
        int id PK
        int user_id FK
        int activity_id FK
        datetime created_at
    }

    CIRCLE {
        int id PK
        string name
        string tag
        string cover_image
        text description
        text announcement
        int owner_id FK
        int pinned_post_id FK
        boolean is_pinned
        datetime pinned_at
        boolean is_system
        int initial_member_count
        int member_count
        string status
        datetime created_at
        datetime updated_at
    }

    POST {
        int id PK
        string title
        text content
        string type
        string status
        datetime created_at
        int user_id FK
        int circle_id FK
    }

    POST_IMAGE {
        int id PK
        int post_id FK
        string image_url
        datetime created_at
    }

    ACTIVITY_REVIEW {
        int id PK
        int activity_id FK
        int reviewer_id FK
        int organization_score
        int venue_score
        int content_score
        int value_score
        int experience_score
        float average_score
        text comment
        string status
        datetime created_at
        datetime updated_at
    }

    CIRCLE_RATING {
        int id PK
        int circle_id FK
        int user_id FK
        int rating
        text comment
        datetime created_at
        datetime updated_at
    }

    TRUST_SCORE_LOG {
        int id PK
        int user_id FK
        int changed_by_id FK
        string change_type
        int delta
        int score_before
        int score_after
        text reason
        string related_type
        int related_id
        datetime created_at
    }

    CIRCLE_MEMBER {
        int id PK
        int circle_id FK
        int user_id FK
        string role
        string status
        datetime joined_at
        datetime updated_at
    }

    COMMENT {
        int id PK
        int author_id FK
        int activity_id FK
        int post_id FK
        int parent_id FK
        text content
        string status
        datetime created_at
        datetime updated_at
    }

    COMMENT_IMAGE {
        int id PK
        int comment_id FK
        string image_url
        datetime created_at
    }

    INTERACTION {
        int id PK
        int user_id FK
        string target_type
        int target_id
        string action_type
        datetime created_at
    }

    PROFILE_VISIBILITY {
        int id PK
        int user_id FK
        string profile_scope
        string activity_scope
        string circle_scope
        string review_scope
        string trust_score_scope
        boolean show_interests
        boolean show_interactions
        datetime created_at
        datetime updated_at
    }

    ADMIN_LOG {
        int id PK
        int admin_id FK
        string action
        string target_type
        int target_id
        text detail
        string ip_address
        datetime created_at
    }

    REVIEW {
        int id PK
        int activity_id FK
        int user_id FK
        int rating
        text comment
        datetime created_at
    }
